--- a/kotlin/android/app/src/main/res/layout/activity_main.xml
+++ b/kotlin/android/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,10 +22,10 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_button"
+        app:backgroundTint="@color/cowBlue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:backgroundTint="@color/cowBlue"
         android:src="@drawable/ic_plus"
         android:layout_margin="@dimen/app_margin" />
 
