--- a/kotlin/android/app/src/main/res/layout/fragment_cow_list.xml
+++ b/kotlin/android/app/src/main/res/layout/fragment_cow_list.xml
@@ -1,10 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".CowListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginHorizontal="@dimen/app_margin"
     android:orientation="vertical"
-    app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
+    tools:context=".CowListFragment">
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/small_app_margin"
+        android:fontFamily="sans-serif-light"
+        android:textSize="30sp"
+        android:textColor="@color/cowBlue"
+        android:text="List title here" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/small_app_margin"
+        android:orientation="vertical"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
+
+</LinearLayout>
