--- a/kotlin/android/app/src/main/res/layout/activity_add_cow.xml
+++ b/kotlin/android/app/src/main/res/layout/activity_add_cow.xml
@@ -38,9 +38,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/app_margin"
-            android:autofillHints=""
             android:inputType="text"
-            android:hint="@string/add_cow_name_hint" />
+            android:hint="@string/add_cow_name_hint"
+            android:importantForAutofill="no" />
 
         <TextView
             android:layout_width="match_parent"
